# Hyakkin-RSS

./: .gitignore  LICENSE  README.md  daiso.py  pyproject.toml  test_daiso.py
.github/workflows/: action-lint.yml  generate_daiso_rss.yaml  lint.yml
docs/: daiso_new_arrivals.xml  daiso_new_arrivals_history.json
