[project]
name = "Hyakkin-RSS"
version = "0.1.0"
description = "100円均一の新商品情報を配信するRSS"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE.txt" }

authors = [{ name = "yamamo-i" }]
dependencies = [
    "asyncclick==8.3.0.7",    # https://pypi.org/project/asyncclick/
    "beautifulsoup4==4.14.3", # https://pypi.org/project/beautifulsoup4/
    "requests==2.32.5",       # https://pypi.org/project/requests/
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# 開発用依存関係を定義
[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.ruff]
line-length = 130
target-version = "py312"
exclude = [".venv", "__pycache__", "build", "dist", "migrations"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "S"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E231", "F401"]
